# xmc4800_cmake

./: CMakeLists.txt  LICENSE  README.md  flash.jlink  main.c  serial.c  serial.h
cmake/: arm-none-eabi.cmake  xmc4800.cmake
